JumpScript/tests/baselines/reference/parserNotHexLiteral1.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parserNotHexLiteral1.jump(2,1): error TS2304: Cannot find name 'console'.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parserNotHexLiteral1.jump(5,1): error TS2304: Cannot find name 'console'.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parserNotHexLiteral1.jump (2 errors) ====
    var x = {e0: 'cat', x0: 'dog'};
    console.info (x.x0);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    // jmpc dies on this next line with "bug.jump (5,16): Expected ')'"
    //   jmpc seems to be parsing the e0 as a hex constant.
    console.info (x.e0);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    